--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <body>
 
+    <aside>
+
+        <p>Los pedidos tienen un tiempo de realizado entre 5 a 10 días hábiles. Envios <strong>GRATIS</strong> para CABA Y GBA con tu compra mayor a $5.000!!</p>
+
+    </aside>
+
+
     <header id="arriba">
 
         <div class="logo">
@@ -25,7 +32,7 @@
             <input type="checkbox" id="menu">
             <label for="menu">☰</label>
             <ul>
-                <li><a href="./index.html">inicio</a></li>
+                <li><a href="./i100ndex.html">inicio</a></li>
                 <li><a href="./pages/nudos.html">nudos</a></li>
                 <li><a href="./pages/tienda.html">tienda</a></li>
                 <li><a href="./pages/nosotros.html">nosotros</a></li>
@@ -36,15 +43,18 @@
     </header>
 
 
-    <aside>
-
-        <p>Los pedidos tienen un tiempo de realizado entre 5 a 10 días hábiles. Envios <strong>GRATIS</strong> para CABA Y GBA con tu compra mayor a $5.000!!</p>
-
-    </aside>
-
-
     <main>
-        
+
+        <section>
+
+            <img src="./img/portada_hilos.jpg" alt="Hilos de 100% algodón">
+
+            <p>...de lo simple,
+                <br>
+            a cada rincón de tu hogar</p>
+
+        </section>
+
 
     </main>
 
@@ -63,19 +73,19 @@
         <div class="redes" id="redes">
 
             <span>
-                <a href="http://www.instagram.com">Instagram</a>
+                <a href="http://www.instagram.com" target="_blank">Instagram</a>
             </span>
 
             <span>
-                <a href="http://www.facebook.com">Facebook</a>
+                <a href="http://www.facebook.com" target="_blank">Facebook</a>
             </span>
 
             <span>
-                <a href="http://www.tiktok.com">TikTok</a>
+                <a href="http://www.tiktok.com" target="_blank">TikTok</a>
             </span>
 
             <span>
-                <a href="http://www.youtube.com">YouTube</a>
+                <a href="http://www.youtube.com" target="_blank">YouTube</a>
             </span>
             
         </div>
