--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -63,19 +63,19 @@
         <div class="redes" id="redes">
 
             <span>
-                <a href="http://www.instagram.com">Instagram</a>
+                <a href="http://www.instagram.com" target="_blank">Instagram</a>
             </span>
 
             <span>
-                <a href="http://www.facebook.com">Facebook</a>
+                <a href="http://www.facebook.com" target="_blank">Facebook</a>
             </span>
 
             <span>
-                <a href="http://www.tiktok.com">TikTok</a>
+                <a href="http://www.tiktok.com" target="_blank">TikTok</a>
             </span>
 
             <span>
-                <a href="http://www.youtube.com">YouTube</a>
+                <a href="http://www.youtube.com" target="_blank">YouTube</a>
             </span>
             
         </div>
