Actualizado con tienda ok

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h2>home&deco</h2>
         </div>
 
-        <nav>
+        <nav class="menu">
             <input type="checkbox" id="menu">
             <label for="menu">☰</label>
             <ul>
-                <li><a href="./i100ndex.html">inicio</a></li>
+                <li><a href="./index.html">inicio</a></li>
                 <li><a href="./pages/nudos.html">nudos</a></li>
                 <li><a href="./pages/tienda.html">tienda</a></li>
                 <li><a href="./pages/nosotros.html">nosotros</a></li>
@@ -45,15 +45,24 @@
 
     <main>
 
-        <section>
+        <section class="portada">
 
-            <img src="./img/portada_hilos.jpg" alt="Hilos de 100% algodón">
+            <img src="./img/00c_portada_hilos.jpg" alt="Hilos de 100% algodón">
 
             <p>...de lo simple,
                 <br>
             a cada rincón de tu hogar</p>
 
         </section>
+
+        <section class="irashop">
+
+            <ul>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_plantas_negro.png" alt="Ir a tienda, seccion plantas"></a></li>
+            </ul>
+
+        </section>
+
 
 
     </main>
@@ -70,25 +79,16 @@
             <a href="#arriba">↑</a>
         </div>
 
-        <div class="redes" id="redes">
-
-            <span>
-                <a href="http://www.instagram.com" target="_blank">Instagram</a>
-            </span>
-
-            <span>
-                <a href="http://www.facebook.com" target="_blank">Facebook</a>
-            </span>
-
-            <span>
-                <a href="http://www.tiktok.com" target="_blank">TikTok</a>
-            </span>
-
-            <span>
-                <a href="http://www.youtube.com" target="_blank">YouTube</a>
-            </span>
-            
-        </div>
+        <nav class="redes">
+            <input type="checkbox" id="seguinos">
+            <label for="seguinos">Seguínos</label>
+            <ul>
+                <li><a href="http://www.instagram.com" target="_blank"><img src="./img/00_logo_instagram.png" alt="Ir al perfin de Instagram"></a></li>
+                <li><a href="http://www.facebook.com" target="_blank"><img src="./img/00_logo_facebook.png" alt="Ir al perfil de Facebook"></a></li>
+                <li><a href="http://www.tiktok.com" target="_blank"><img src="./img/00_logo_tiktok.png" alt="Ir al perfil de TikTok"></a></li>
+                <li><a href="http://www.youtube.com" target="_blank"><img src="./img/00_logo_instagram.png" alt="Ir al canal de Youtube"></a></li>
+            </ul>
+        </nav>
 
     </footer>
 
