--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
 
         <section class="irashop">
 
+            <a href="./pages/tienda.html"><img src="./img/00iconos_bolsas_vivido.png" alt="Ir a tienda"></a>
+
             <ul>
-                <li><a href="./pages/tienda.html"><img src="./img/00iconos_plantas_negro.png" alt="Ir a tienda, seccion plantas"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_cuadro_vivido.png" alt="Ir a tienda, seccion tapices"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_camita_vivido.png" alt="Ir a tienda, seccion hamaca para mascotas"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_estante_vivido.png" alt="Ir a tienda, seccion repisas y estantes"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_plantas_vivido.png" alt="Ir a tienda, seccion plantas"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_llaves_vivido.png" alt="Ir a tienda, seccion llaveros"></a></li>
+                <li><a href="./pages/tienda.html"><img src="./img/00iconos_otros_vivido.png" alt="Ir a tienda, seccion accesorios"></a></li>
             </ul>
 
         </section>
-
-
 
     </main>
 
