--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -32,11 +32,11 @@
             <input type="checkbox" id="menu">
             <label for="menu">☰</label>
             <ul>
-                <li><a href="./index.html">inicio</a></li>
-                <li><a href="./pages/nudos.html">nudos</a></li>
-                <li><a href="./pages/tienda.html">tienda</a></li>
-                <li><a href="./pages/nosotros.html">nosotros</a></li>
-                <li><a href="./pages/contacto.html">contacto</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="./nudos.html">nudos</a></li>
+                <li><a href="./tienda.html">tienda</a></li>
+                <li><a href="./nosotros.html">nosotros</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
             </ul>
         </nav>
   
