--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
             <h2>home&deco</h2>
         </div>
 
-        <nav>
+        <nav class="menu">
             <input type="checkbox" id="menu">
             <label for="menu">☰</label>
             <ul>
