--- a/pages/nudos.html
+++ b/pages/nudos.html
@@ -14,9 +14,16 @@
 
 <body>
 
+    <aside>
+
+        <p>Los pedidos tienen un tiempo de realizado entre 5 a 10 días hábiles. Envios <strong>GRATIS</strong> para CABA Y GBA con tu compra mayor a $5.000!!</p>
+
+    </aside>
+
+
     <header id="arriba">
 
-        <div>
+        <div class="logo">
             <h1>nudos</h1>
             <h2>home&deco</h2>
         </div>
@@ -32,20 +39,13 @@
                 <li><a href="./contacto.html">contacto</a></li>
             </ul>
         </nav>
-
+  
     </header>
-
-
-    <aside>
-
-        <p>Los pedidos tienen un tiempo de realizado entre 5 a 10 días hábiles. Envios <strong>GRATIS</strong> para CABA Y GBA con tu compra mayor a $5.000!!</p>
-
-    </aside>
 
 
     <main>
 
-
+        
     </main>
 
 
@@ -60,25 +60,16 @@
             <a href="#arriba">↑</a>
         </div>
 
-        <div class="redes" id="redes">
-
-            <span>
-                <a href="http://www.instagram.com" target="_blank">Instagram</a>
-            </span>
-
-            <span>
-                <a href="http://www.facebook.com" target="_blank">Facebook</a>
-            </span>
-
-            <span>
-                <a href="http://www.tiktok.com" target="_blank">TikTok</a>
-            </span>
-
-            <span>
-                <a href="http://www.youtube.com" target="_blank">YouTube</a>
-            </span>
-            
-        </div>
+        <nav class="redes">
+            <input type="checkbox" id="seguinos">
+            <label for="seguinos">Seguínos</label>
+            <ul>
+                <li><a href="http://www.instagram.com" target="_blank"><img src="../img/00_logo_instagram.png" alt="Ir al perfin de Instagram"></a></li>
+                <li><a href="http://www.facebook.com" target="_blank"><img src="../img/00_logo_facebook.png" alt="Ir al perfil de Facebook"></a></li>
+                <li><a href="http://www.tiktok.com" target="_blank"><img src="../img/00_logo_tiktok.png" alt="Ir al perfil de TikTok"></a></li>
+                <li><a href="http://www.youtube.com" target="_blank"><img src="../img/00_logo_instagram.png" alt="Ir al canal de Youtube"></a></li>
+            </ul>
+        </nav>
 
     </footer>
 
