Agregado de contenido

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,6 +44,24 @@
 
 
     <main>
+        
+        <div>
+
+            <h3>SOMOS NUDOS</h3>
+
+            <section class="nosotros">
+                <img src="../img/sobre_nosotros.jpg" alt="" class="col-12 col-md-8">
+        
+                <p class="col-12 col-md-4">
+                    Mi nombre es Agustina, tengo 30 años y soy oriunda de Gran Buenos Aires.
+                    Me gusta viajar, me gustan las montañas, el silencio y la brisa de nuestra hermosa Cordillera.
+                    Realizo nudos en macramé por hobbie, desde muy chica.
+                    Pero desde 2022, comencé de este arte mi emprendimiento.
+                    Espero que lo disfruten tanto como yo.
+                </p>
+            </section>
+
+        </div>
 
     </main>
 
