--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,6 +44,44 @@
 
 
     <main>
+        
+        <h3>Trabajos a medida</h3>
+
+        <p>Dejanos tu mensaje, con las indicaciones del pedido y te contactaemos a la brevedad para enviarte el
+            presupuesto.</p>
+
+        <form action="">
+
+            <div>
+                <label for="nombre_usuario">Nombre</label>
+                <input type="text" id="nombre_usuario">
+            </div>
+
+            <div>
+                <label for="email_usuario">Mail</label>
+                <input type="email" id="email_usuario">
+            </div>
+
+            <div>
+                <label for="celular">Celular</label>
+                <input type="tel" id="celular">
+            </div>
+
+            <div>
+                <label for="mensaje">Mensaje</label>
+                <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
+            </div>
+
+            <div>
+                <label for="novedades">¿Desea recibir novedades?</label>
+                <input type="checkbox" id="novedades">
+            </div>
+
+            <div>
+                <input type="submit" value="Enviar">
+            </div>
+
+        </form>
 
     </main>
 
